# Multi-UAV-Search

./: .gitignore  README.md
scripts/: vis.py
src/falcon_planner/exploration_manager/: CMakeLists.txt  package.xml
src/falcon_planner/exploration_manager/config/: exploration_manager.yaml  rviz.rviz  rviz_swarm.rviz  rviz_swarm_1.rviz  rviz_swarm_2.rviz  rviz_swarm_3.rviz
src/falcon_planner/exploration_manager/json/: target_probability_with_metadata_1.json  target_probability_with_metadata_2.json  target_probability_with_metadata_3.json
src/falcon_planner/exploration_manager/launch/: pedsim.launch  rviz_swarm.launch  single_exploration.xml  swarm_exploration.launch  swarm_exploration_1.launch  swarm_exploration_2.launch  swarm_exploration_3.launch
src/falcon_planner/exploration_manager/log/: exploration_node.ERROR  exploration_node.FATAL  exploration_node.INFO  exploration_node.WARNING  exploration_node.chai.chai.log.ERROR.20250724-193230.14518  exploration_node.chai.chai.log.ERROR.20250724-193833.16520  exploration_node.chai.chai.log.ERROR.20250724-193833.16693  exploration_node.chai.chai.log.ERROR.20250724-193908.18631  exploration_node.chai.chai.log.ERROR.20250724-195922.25995  exploration_node.chai.chai.log.FATAL.20250724-193918.18394  exploration_node.chai.chai.log.FATAL.20250724-195626.24241  exploration_node.chai.chai.log.INFO.20250724-192821.12550  exploration_node.chai.chai.log.INFO.20250724-192821.12560  exploration_node.chai.chai.log.INFO.20250724-192821.12634  exploration_node.chai.chai.log.INFO.20250724-193222.14509  exploration_node.chai.chai.log.INFO.20250724-193223.14518  exploration_node.chai.chai.log.INFO.20250724-193223.14553  exploration_node.chai.chai.log.INFO.20250724-193825.16510  exploration_node.chai.chai.log.INFO.20250724-193825.16520  (+381 more)
(+68 files in other folders)
