<?xml version="1.0"?>
<package format="2">
  <name>exploration_manager</name>
  <version>0.0.0</version>
  <description>The exploration_manager package</description>
  <maintainer email="eason@todo.todo">eason</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>pathfinding</build_depend>
  <build_depend>exploration_preprocessing</build_depend>
  <build_depend>fast_planner</build_depend>
  <build_depend>trajectory</build_depend>
  <build_depend>exploration_utils</build_depend>
  <build_depend>voxel_mapping</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>pathfinding</exec_depend>
  <exec_depend>exploration_preprocessing</exec_depend>
  <exec_depend>fast_planner</exec_depend>
  <exec_depend>trajectory</exec_depend>
  <exec_depend>exploration_utils</exec_depend>
  <exec_depend>voxel_mapping</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
